[gd_scene load_steps=6 format=3 uid="uid://cj8s3fmgtbepl"]

[ext_resource type="Script" uid="uid://cpyty07tyb6h" path="res://script/player/shield.gd" id="1_rvbba"]
[ext_resource type="Texture2D" uid="uid://l5fk8tcutq6o" path="res://assets/textures/entities/skill/shield/shieldWhite_Edit.png" id="2_4fw24"]
[ext_resource type="AudioStream" uid="uid://c1jmgyhsqpkej" path="res://assets/audio/SFX/Shield.mp3" id="3_4fw24"]
[ext_resource type="AudioStream" uid="uid://cgb417lwexbhy" path="res://assets/audio/SFX/block_shield.mp3" id="3_c2d3t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bvw3l"]
radius = 40.0125

[node name="Shield" type="Area2D"]
z_index = 1
collision_mask = 10
script = ExtResource("1_rvbba")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_4fw24")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bvw3l")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="SfxHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c2d3t")
volume_db = 3.059

[node name="SfxActivate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4fw24")

[connection signal="area_entered" from="." to="." method="_on_thing_entered"]
[connection signal="body_entered" from="." to="." method="_on_thing_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="disappear_animation"]
